Change input tags for third fieldset for personal details. Start adding CSS styles

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <h3 class="fs-subtitle">We will never sell it</h3>
         <input type="text" name="fname" placeholder="First Name"/>
         <input type="text" name="lname" placeholder="Last Name"/>
-        <input type="text" name="gplus" placeholder="Google Plus" />
+        <input type="text" name="phone" placeholder="Phone" />
+        <textarea name="address" placeholder="Address"></textarea>
         <input type="button" name="previous" class="previous" value="Previous" />
-        <input type="button" name="next" class="next" value="Next" />
+        <input type="submit" name="submit" class="submit" value="Submit" />
       </fieldset>
     </form>
 
