--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <form id="msform">
       <!--Progressbar -->
       <ul id="progressbar">
-        <li>Account</li>
+        <li class="active">Account Setup</li>
         <li>Social Profiles</li>
         <li>Personal Details</li>
       </ul>
@@ -19,7 +19,7 @@
         <input type="text" name="email" placeholder="Email"/>
         <input type="password" name="pass" placeholder="Password"/>
         <input type="password" name="cpass" placeholder="Confirm Password" />
-        <input type="button" name="next" class="next" value="Next" />
+        <input type="button" name="next" class="next action-button" value="Next" />
       </fieldset>
 
       <fieldset>
@@ -28,8 +28,8 @@
         <input type="text" name="twitter" placeholder="Twitter"/>
         <input type="text" name="facebook" placeholder="Facebook"/>
         <input type="text" name="gplus" placeholder="Google Plus" />
-        <input type="button" name="previous" class="previous" value="Previous" />
-        <input type="button" name="next" class="next" value="Next" />
+        <input type="button" name="previous" class="previous action-button" value="Previous" />
+        <input type="button" name="next" class="next action-button" value="Next" />
       </fieldset>
 
       <fieldset>
@@ -39,8 +39,8 @@
         <input type="text" name="lname" placeholder="Last Name"/>
         <input type="text" name="phone" placeholder="Phone" />
         <textarea name="address" placeholder="Address"></textarea>
-        <input type="button" name="previous" class="previous" value="Previous" />
-        <input type="submit" name="submit" class="submit" value="Submit" />
+        <input type="button" name="previous" class="previous action-button" value="Previous" />
+        <input type="submit" name="submit" class="submit action-button" value="Submit" />
       </fieldset>
     </form>
 
